Fix greeting text in welcome template

--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
         <div class="welcome-message">
             <img src="ufe-mon.webp" alt="UFE Logo" class="logo-large light-logo">
             <img src="ufe-white.png" alt="UFE Logo" class="logo-large dark-logo">
-            <h2>тавтай морил!</h2>
+            <h2>Тавтай морил!</h2>
             <p>Би танд туслахад бэлэн байна. Юу ч асуугаарай эсвэл доорх хурдан үйлдлүүдээс сонгоно уу.</p>
             <div class="quick-actions">
                 <button class="quick-action" onclick="sendQuickMessage('Сайн уу!')">Мэндчилье</button>
